--- a/Cocktails.css
+++ b/Cocktails.css
@@ -56,6 +56,7 @@ header p {
 
 .horaires {
     background: url(fond1.jpg);
+    cursor: pointer;
 }
 
 .mention {
@@ -65,6 +66,9 @@ header p {
 .fond {
     background: url(fond3.jpg);
 }
+
+.horaires::hover {
+    scale: 1.1}
 
 /* Cocktails */
 
